plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.14'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.lshlabs'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.cloudinary:cloudinary-http44:1.39.0'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	// 기본 CI/로컬에서는 안정 세트만 실행
	// (계약/성능/스모크는 별도 태스크로 분리)
	useJUnitPlatform {
		excludeTags 'contract', 'performance', 'smoke', 'container'
	}
}

tasks.register('unitTest', Test) {
	group = 'verification'
	description = 'Runs unit tests only'
	useJUnitPlatform {
		includeTags 'unit'
	}
}

tasks.register('integrationTest', Test) {
	group = 'verification'
	description = 'Runs integration tests only'
	useJUnitPlatform {
		includeTags 'integration'
	}
}

tasks.register('contractTest', Test) {
	group = 'verification'
	description = 'Runs contract/parity tests only'
	useJUnitPlatform {
		includeTags 'contract'
	}
}

tasks.register('smokeTest', Test) {
	group = 'verification'
	description = 'Runs smoke tests only'
	useJUnitPlatform {
		includeTags 'smoke'
	}
}

tasks.register('performanceTest', Test) {
	group = 'verification'
	description = 'Runs performance tests only'
	useJUnitPlatform {
		includeTags 'performance'
	}
}
